Fixed double scroll on event page

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -14,3 +14,7 @@ mat-tab-group {
   height: 100%;
 }
 
+mat-tab ng-template app-manage-events {
+  overflow: hidden;
+  height: 100%;
+}
