--- a/src/app/components/manage-events/manage-events.component.scss
+++ b/src/app/components/manage-events/manage-events.component.scss
@@ -1,9 +1,3 @@
-.wrapper {
-  display: flex;
-  width: 100%;
-  padding: 15px;
-  flex-direction: column;
-}
 
 .title {
   align-self: center;
@@ -36,10 +30,15 @@ mat-tab-group {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  overflow: hidden;
   height: 10%;
 }
 .header mat-toolbar {
   height: 100%;
+}
+
+cdk-virtual-scroll-viewport {
+  height: 90%;
 }
 
 #leftToolbar {
